--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="">
+    <meta property="og:url" content="https://russianestateincome.com/">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="/images/logo.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="216">
-    <meta property="og:image:height" content="180">
     <meta property="og:description" content="">
     <meta property="og:title" content="Russianestateincome">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
